# ai-knowledge-graph

./: .ev.example  .gitignore  CHANGES.md  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt  test_pipeline.ipynb
kg/: cli.py
kg/clustering/: __init__.py  cluster.py  naming.py
kg/commands/: cited_by.py  cluster.py  embed.py  enrich.py  flow.py  search.py  top.py  trace.py  trends.py  visualize.py
kg/crawlers/: arxiv.py  base.py  github.py
kg/enrichment/: __init__.py  crossref.py  llm_judge.py  openalex.py  runner.py  semantic_scholar.py
kg/flow/: __init__.py  citation_flow.py
kg/graph/: neo4j_client.py  queries.py
kg/nlp/: __init__.py  embedder.py  enrichment_runner.py  extractor.py  llm_enrichment.py
kg/nlp/vocabulary/: datasets.txt  methods.txt  tasks.txt
kg/utils/: config.py
kg/visualization/: graph.html  graph_data.json  river.html
test/: test_arxiv_crawler.py  test_extractor.py  test_github_crawler.py
