[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-kg"
version = "0.1.0"
description = "AI Research Intelligence Platform — crawl, enrich, embed, and explore arXiv papers"
requires-python = ">=3.11"

[project.scripts]
kg = "kg.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["kg*"]